# rezeptinger

./: .dockerignore  .gitignore  .mise.toml  AGENTS.md  CLAUDE.md  CODEX.md  Dockerfile  GEMINI.md  Makefile  README.md  TODO.md  compose.yaml  manage.py  pyproject.toml
.github/workflows/: docker.yml  polyscan.yml  quality.yml
recipes/: admin.py  apps.py  forms.py  models.py  signals.py  tasks.py  tests.py  urls.py  views.py
recipes/migrations/: 0001_initial.py  0002_recipe_search_fts.py  0003_recipeingredient.py  0004_source_cancel_queue_task.py  0005_extractionattempt_and_more.py  0006_appsettings.py  0007_tag_recipe_tags.py  0008_recipesource_source_type.py  0009_alter_recipesource_source_type.py
recipes/services/: app_settings.py  duplicates.py  extractor.py  ingredients.py  lmstudio.py  portable_data.py  queue.py  search.py  webpage.py  youtube.py
recipes/static/recipes/: app.css
recipes/templates/recipes/: base.html  bookmarklet.html  data_tools.html  detail.html  edit.html  index.html  queue_status.html  source_detail.html
rezeptinger/: asgi.py  settings.py  urls.py  wsgi.py
scripts/: docker-entrypoint.sh
