[project]
name = "rezeptinger"
version = "0.1.0"
description = "Django recipe catalog with YouTube transcript extraction via LM Studio"
requires-python = ">=3.12,<3.13"
dependencies = [
    "django>=5.2,<6.0",
    "gunicorn>=25.3.0",
    "httpx>=0.28,<0.29",
    "huey>=2.5,<3.0",
    "whitenoise>=6.12.0",
    "yt-dlp>=2026.3.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["*/migrations/*.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
